corrigindo notebooks e roteiros de estudo

--- a/02_fundamentos_pandas/notebook/21_identificando_e_removendo_outliers.ipynb
+++ b/02_fundamentos_pandas/notebook/21_identificando_e_removendo_outliers.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -242,7 +242,7 @@
        "15520   300  4500000.0      1100.0    0.0  15000.00   Apartamento  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -354,13 +354,13 @@
    "metadata": {},
    "source": [
     "### Comparando com histogramas\n",
-    "* o histogrma mostra a distribuição da frequência dos dados\n",
+    "* o histograma mostra a distribuição da frequência dos dados\n",
     "* observando as duas variáveis, é possível ver um comportamento melhor da segunda, após o tratamento, com a remoção dos outliers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -371,7 +371,7 @@
        "array([[<AxesSubplot:title={'center':'Valor'}>]], dtype=object)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -463,7 +463,7 @@
        "Name: Valor m2, dtype: float64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -575,7 +575,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
        "<AxesSubplot:xlabel='Valor m2'>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
