--- a/02_fundamentos_pandas/notebook/22_removendo_outliers_continuacao.ipynb
+++ b/02_fundamentos_pandas/notebook/22_removendo_outliers_continuacao.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "<AxesSubplot:title={'center':'Valor'}, xlabel='Tipo'>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -65,6 +65,7 @@
     }
    ],
    "source": [
+    "# faz um boxplot individual pra cada tipo\n",
     "dados.boxplot('Valor', by='Tipo')"
    ]
   },
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,7 @@
        "pandas.core.groupby.generic.DataFrameGroupBy"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +122,7 @@
        "pandas.core.groupby.generic.SeriesGroupBy"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +157,7 @@
        "{'Apartamento': [2, 3, 4, 7, 8, 9, 11, 13, 14, 15, 17, 18, 19, 20, 21, 23, 24, 25, 26, 27, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 55, 56, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 73, 74, 75, 76, 77, 79, 80, 82, 83, 84, 85, 87, 88, 89, 90, 91, 92, 93, 94, 95, 97, 98, 99, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, ...], 'Casa': [1, 22, 54, 57, 96, 100, 144, 160, 180, 238, 250, 253, 264, 286, 310, 316, 334, 339, 357, 378, 385, 399, 424, 434, 474, 475, 481, 511, 542, 543, 567, 571, 572, 618, 621, 630, 635, 636, 660, 676, 700, 721, 724, 760, 771, 780, 856, 873, 937, 982, 1029, 1036, 1118, 1123, 1125, 1157, 1178, 1249, 1256, 1316, 1335, 1350, 1371, 1412, 1426, 1430, 1440, 1445, 1472, 1475, 1488, 1586, 1604, 1656, 1662, 1666, 1671, 1684, 1709, 1717, 1762, 1810, 1835, 1875, 1905, 1933, 1942, 1960, 2019, 2039, 2056, 2075, 2101, 2107, 2108, 2133, 2170, 2201, 2204, 2211, ...], 'Casa de Condomínio': [5, 6, 12, 16, 42, 58, 166, 168, 183, 207, 222, 246, 259, 265, 279, 291, 308, 336, 391, 401, 440, 445, 449, 502, 556, 609, 622, 657, 663, 673, 707, 723, 781, 807, 809, 863, 883, 887, 934, 958, 961, 979, 986, 992, 1004, 1008, 1028, 1082, 1095, 1112, 1129, 1148, 1158, 1182, 1220, 1227, 1229, 1239, 1246, 1308, 1312, 1320, 1341, 1356, 1406, 1438, 1439, 1467, 1495, 1531, 1560, 1582, 1601, 1615, 1646, 1713, 1722, 1728, 1756, 1764, 1770, 1802, 1860, 1880, 1883, 1899, 1938, 2031, 2033, 2071, 2152, 2168, 2200, 2224, 2246, 2248, 2327, 2333, 2357, 2371, ...], 'Casa de Vila': [81, 212, 220, 303, 332, 697, 822, 844, 918, 1012, 1353, 1362, 1447, 1491, 1553, 1639, 1669, 1703, 1769, 2087, 2249, 2267, 2446, 2533, 2547, 2605, 2641, 2727, 2840, 2872, 2977, 2984, 3017, 3025, 3300, 3426, 3523, 3703, 3823, 3855, 3858, 3863, 4094, 4146, 4153, 4165, 4340, 4444, 4826, 5151, 5170, 5175, 5198, 5294, 5410, 5535, 5597, 5724, 5751, 5911, 5950, 5995, 6008, 6031, 6049, 6201, 6236, 6300, 6348, 6402, 6429, 6754, 6795, 6939, 6957, 7033, 7091, 7146, 7296, 7697, 7712, 7778, 7837, 7843, 7968, 8004, 8136, 8427, 8452, 8578, 9229, 9234, 9319, 9476, 9619, 9624, 9716, 9739, 9784, 9867, ...], 'Quitinete': [0, 10, 28, 71, 78, 86, 101, 120, 146, 174, 191, 206, 223, 248, 301, 314, 327, 344, 355, 425, 426, 427, 460, 486, 532, 633, 650, 680, 808, 870, 917, 919, 924, 928, 939, 944, 970, 1001, 1016, 1044, 1070, 1156, 1170, 1172, 1184, 1192, 1196, 1212, 1217, 1261, 1274, 1334, 1351, 1360, 1393, 1404, 1407, 1483, 1496, 1510, 1543, 1595, 1611, 1613, 1633, 1696, 1697, 1706, 1733, 1753, 1772, 1824, 1839, 1853, 1910, 2013, 2085, 2098, 2125, 2142, 2149, 2156, 2160, 2227, 2237, 2239, 2258, 2272, 2326, 2362, 2382, 2383, 2384, 2394, 2445, 2457, 2462, 2493, 2507, 2630, ...]}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,10 +175,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# criamos novamente as estatísticas e os limites\n",
+    "# cada variável vira uma Series por tipo de imóvel\n",
     "Q1 = grupo_tipo.quantile(.25)\n",
     "Q3 = grupo_tipo.quantile(.75)\n",
     "IIQ = Q3 - Q1\n",
@@ -194,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +212,7 @@
        "Name: Valor, dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +238,7 @@
        "Name: Valor, dtype: float64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +264,7 @@
        "Name: Valor, dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +290,7 @@
        "Name: Valor, dtype: float64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +316,7 @@
        "Name: Valor, dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,8 +334,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3250.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "limite_inferior['Apartamento']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -340,7 +365,7 @@
        "22850.0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -394,22 +419,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "dados_new = pd.DataFrame()\n",
+    "# gera um novo dataframe vazio para fazer a concatenação\n",
     "for tipo in grupo_tipo.groups.keys():\n",
     "    eh_tipo = dados['Tipo'] == tipo\n",
+    "    # seleciona o tipo de imóvel desejado nos dados\n",
     "    eh_dentro_limite = (dados['Valor'] >= limite_inferior[tipo]) & (dados['Valor'] <= limite_superior[tipo])\n",
+    "    # pega o tipo desejado apenas dentro da faixa estatistica desejada\n",
     "    selecao = eh_tipo & eh_dentro_limite\n",
+    "    # junta as duas seleções\n",
     "    dados_selecao = dados[selecao]\n",
-    "    dados_new = pd.concat([dados_new, dados_selecao])"
+    "    # passa a seleção para um novo dataframe\n",
+    "    dados_new = pd.concat([dados_new, dados_selecao])\n",
+    "    # concatena dataframe gerado no laço em um outro novo dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +449,7 @@
        "<AxesSubplot:title={'center':'Valor'}, xlabel='Tipo'>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -436,6 +467,7 @@
     }
    ],
    "source": [
+    "# agora é feita uma análise mais elaborada para cada grupo\n",
     "dados_new.boxplot('Valor', by='Tipo')"
    ]
   },
@@ -455,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
